Fix layout bug in IE10

--- a/css/src/_layout.scss
+++ b/css/src/_layout.scss
@@ -186,3 +186,8 @@
 		}
 	}
 }
+
+// Layout bug with IE10 and <main> element; has display:inline by default.
+main {
+	display: block;
+}
